first search commit43

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <main>
+    <h2>good morning</h2>
+    <p>yes yes yes</p>
     {{ content }}
   </main>
   {% include footer.html %}
