--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" href="{{ site.url }}/{{ site.baseurl }}/assets/css/style5.css">
+  <link rel="stylesheet" href="{{ site.url }}/{{ site.baseurl }}/assets/css/main.css">
 </head>
 <body>
   <main>
